# colstodian

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/: FUNDING.yml
.github/workflows/: ci.yaml  rustdoc.yaml
bytemuck/: all.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.pod_read_unaligned.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  fn.try_pod_read_unaligned.html  index.html  macro.offset_of.html  sidebar-items.js  trait.AnyBitPattern.html  trait.Contiguous.html  trait.NoUninit.html  trait.Pod.html  trait.PodInOption.html  trait.TransparentWrapper.html  trait.Zeroable.html  trait.ZeroableInOption.html
bytemuck/checked/: enum.CheckedCastError.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_read_unaligned.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  fn.try_pod_read_unaligned.html  index.html  trait.CheckedBitPattern.html
cint/: all.html  enum.Spaces.html  index.html  sidebar-items.js  struct.Aces2065.html  struct.AcesCc.html  struct.AcesCct.html  struct.AcesCg.html  struct.Alpha.html  struct.Bt2020.html  struct.Bt2100.html  struct.CieLCh.html  struct.CieLab.html  struct.CieXYZ.html  struct.DciP3.html  struct.DciXYZPrime.html  struct.DisplayP3.html  struct.EncodedBt2020.html  struct.EncodedBt2100HLG.html  struct.EncodedBt2100PQ.html  struct.EncodedDisplayP3.html  struct.EncodedRec709.html  struct.EncodedSrgb.html  struct.GenericColor.html  struct.GenericColor1.html  struct.GenericColor3.html  struct.Hsl.html  struct.Hsv.html  struct.ICtCpHLG.html  struct.ICtCpPQ.html  struct.LinearSrgb.html  struct.Luma.html  struct.Luminance.html  struct.Oklab.html  struct.Oklch.html  struct.PremultipliedAlpha.html  struct.Rec709.html  struct.YCbCr.html  struct.YCxCz.html  struct.YPbPr.html  (+6 more)
colstodian/: all.html  enum.ColorError.html  enum.DynamicAlphaState.html  enum.DynamicState.html  index.html  macro.assert_eq_eps!.html  macro.assert_eq_eps.html  macro.const_color!.html  macro.const_color.html  macro.const_color_alpha!.html  macro.const_color_alpha.html  sidebar-items.js  struct.Color.html  struct.ColorAlpha.html  struct.ColorU8.html  struct.ColorU8Alpha.html  struct.Display.html  struct.DynamicColorSpace.html  struct.Premultiplied.html  struct.Scene.html  struct.Separate.html  trait.AlphaState.html  trait.ColorEncoding.html  trait.ColorInto.html  trait.ColorSpace.html  trait.PerceptualEncoding.html  trait.State.html  trait.WorkingEncoding.html  type.ColorResult.html
colstodian/alpha_states/: enum.DynamicAlphaState.html  index.html  sidebar-items.js  struct.Premultiplied.html  struct.Separate.html
colstodian/basic_encodings/: index.html  sidebar-items.js  struct.LinearSrgb.html  struct.LinearSrgbA.html  struct.SrgbAU8.html  struct.SrgbU8.html
colstodian/color/: fn.acescg.html  fn.linear_srgb.html  fn.linear_srgba.html  fn.srgb.html  fn.srgb_u8.html  fn.srgba.html  fn.srgba_u8.html  index.html  sidebar-items.js  struct.Color.html  struct.ColorAlpha.html  struct.ColorU8.html  struct.ColorU8Alpha.html
colstodian/component_structs/: index.html  sidebar-items.js  struct.ColAlpha.html  struct.ICtCp.html  struct.LCh.html  struct.Lab.html  struct.Rgb.html  struct.Xyz.html
colstodian/details/: index.html  sidebar-items.js
colstodian/error/: enum.ColorError.html  (+5 more)
glam/: all.html  enum.EulerRot.html  index.html  macro.const_dmat2.html  macro.const_dmat3.html  macro.const_dmat4.html  macro.const_dquat.html  macro.const_dvec2.html  macro.const_dvec3.html  macro.const_dvec4.html  macro.const_ivec2.html  macro.const_ivec3.html  macro.const_ivec4.html  macro.const_m128.html  macro.const_mat2.html  macro.const_mat3.html  macro.const_mat3a.html  macro.const_mat4.html  macro.const_quat.html  macro.const_uvec2.html  macro.const_uvec3.html  macro.const_uvec4.html  macro.const_vec2.html  macro.const_vec3.html  macro.const_vec3a.html  macro.const_vec4.html  sidebar-items.js  trait.Vec2Swizzles.html  trait.Vec3Swizzles.html  trait.Vec4Swizzles.html
kolor/: all.html  index.html  macro.const_mat3.html  sidebar-items.js  struct.Color.html  struct.ColorConversion.html  struct.ColorSpace.html  struct.Mat3.html  struct.Vec3.html  type.FType.html
num_traits/: trait.Num.html
serde/: index.html  trait.Deserialize.html  trait.Serialize.html
serde_derive/: index.html
src/: alpha_states.rs  blenders.rs  color.rs  color_alpha.rs  component_structs.rs  encodings.rs  error.rs  lib.rs  linear_spaces.rs  spaces.rs  states.rs  tonemap.rs  tonemapper.rs  traits.rs
(+906 files in other folders)
