[package]
name = "colstodian"
version = "0.2.0-alpha.0"
authors = ["Gray Olson <gray@grayolson.com>"]
license = "MIT OR Apache-2.0 OR Zlib"
edition = "2021"
description = "An opinionated, practical color management library for games and graphics."
documentation = "https://docs.rs/colstodian"
homepage = "https://github.com/fu5ha/colstodian"
repository = "https://github.com/fu5ha/colstodian"

[package.metadata.docs.rs]
features = ["std", "serde", "bytemuck"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/state/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", optional = true }
cint = { version = "^0.3.1", features = ["bytemuck"] }
glam = { version = "0.23", default-features = false } # keep in sync with kolor
# kolor = { version = "^0.1.9", default-features = false, features = ["glam", "f32", "color-matrices"], path = "../kolor/build/kolor" }
kolor = { version = "0.1.9", default-features = false, features = ["glam", "f32", "color-matrices"] }
num-traits = { version = "0.2", optional = true, default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
half = { version = "2", optional = true, default-features = false }

[features]
default = ["std", "bytemuck"]

# enable support for half precision float formats
half = ["dep:half"]

# enable support for the standard library
std = ["kolor/std", "glam/std", "half/std"]

# libm is required when building with no_std
libm = ["kolor/libm", "glam/libm", "num-traits", "num-traits/libm", "half/num-traits"]

# add serde Serialize/Deserialize to relevant types
serde = ["dep:serde", "kolor/serde1", "glam/serde", "half/serde"]

bytemuck = ["dep:bytemuck", "glam/bytemuck", "half/bytemuck"]
